# GPTA

./: CMakeLists.txt  Makefile  README.md
examples/: calcite.gin  calcite.xtc  clean.sh  coord.xtc  examples.txt  slab.xtc
examples/referenceData/: calcite_xray.mercury  calcite_xray.rruff
src/: actionModule.F90  actions.F90  addAtoms.F90  addCentres.F90  addDummyParticle.F90  addElements.F90  addFile.F90  addMolecules.F90  alignMolecule.F90  align_molecules.F90  amoeba.F90  changeCoordinates.F90  commonNeighboursAnalysis.F90  computeSteinhardt.F90  createNewCell.F90  createSurface.F90  dcdfort_common.F90  dcdfort_reader.F90  dcdfort_writer.F90  defineVariables.F90  deleteAtoms.F90  densityMap1D.F90  densityMap2D.F90  densityMap3D.F90  densityProfile.F90  distances.F90  dumpCoordinates.F90  elementsModule.F90  extractClusters.F90  extractFramesByProperty.F90  extractProperties.F90  filesModule.F90  gpta.F90  header.h  help.F90  inertiaTensor.F90  interfaceOpenMM.cpp  legendre.F90  meanSquareDisplacement.F90  mergeFiles.F90  (+44 more)
src/gsas/: genhkl.for  sglatc.for  sglcen.for  sglpak.for  sgmtml.for  sgoprn.for  sgrmat.for  sgroupnp.for  sgtrfc.for  test_code.F90
src/xdr/: xdrfile.c  xdrfile.h  xdrfile_trr.c  xdrfile_trr.h  xdrfile_xtc.h
